# bigedit

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.codacy/: codacy.yaml
.github/workflows/: release.yml
arch/: PKGBUILD  bigedit.install
benches/: download_wikipedia.sh
debian/: changelog  control  copyright  postinst  prerm  rules
homebrew/: bigedit.rb
launchd/: com.bigedit.watcher.plist
scripts/: test_apfs.sh  test_btrfs.sh
src/: config.rs  editor.rs  fuse_view.rs  journal.rs  language.rs  lib.rs  main.rs  overlay.rs  patches.rs  save.rs  search.rs  search_service.rs  semantic.rs  types.rs  ui.rs  viewport.rs
systemd/: 90-bigedit.preset  bigedit-fuse@.service  bigedit-watcher  bigedit-watcher.service
tests/: apfs_bench.rs  embedding_bench.rs  integration_test.rs  wikipedia_bench.rs
