[package]
name = "bigedit"
version = "0.1.15"
edition = "2021"
description = "A streaming TUI editor for very large files"
authors = ["bigedit contributors"]

[features]
default = ["fuse"]
fuse = ["dep:fuser", "dep:ctrlc"]

[[bin]]
name = "bigedit"
path = "src/main.rs"

[[bin]]
name = "bigedit-fuse"
path = "src/bin/fuse_daemon.rs"
required-features = ["fuse"]

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Fast searching
memchr = "2.7"

# Unicode handling
unicode-segmentation = "1.12"
unicode-width = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Safe temp file creation
tempfile = "3.14"

# FUSE filesystem for virtual patched file view (optional)
fuser = { version = "0.14", optional = true }

# Signal handling for FUSE daemon (optional)
ctrlc = { version = "3.4", optional = true }

# libc for FUSE error codes and system calls
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
