[package]
name = "bigedit"
version = "0.1.17"
edition = "2021"
description = "A streaming TUI editor for very large files"
authors = ["bigedit contributors"]

[features]
default = ["fuse"]
fuse = ["dep:fuser", "dep:ctrlc"]
semantic-search = ["dep:ort", "dep:tokenizers", "dep:whatlang", "dep:rand", "dep:ndarray"]

[[bin]]
name = "bigedit"
path = "src/main.rs"

[[bin]]
name = "bigedit-fuse"
path = "src/bin/fuse_daemon.rs"
required-features = ["fuse"]

[[bin]]
name = "bench_search"
path = "src/bin/bench_search.rs"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# Fast searching
memchr = "2.7"
regex = "1.10"

# Unicode handling
unicode-segmentation = "1.12"
unicode-width = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Safe temp file creation
tempfile = "3.14"

# Config file parsing
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

# User directories (for config path)
dirs = "5.0"

# FUSE filesystem for virtual patched file view (optional)
fuser = { version = "0.14", optional = true }

# Signal handling for FUSE daemon (optional)
ctrlc = { version = "3.4", optional = true }

# ONNX runtime for embeddings (optional, semantic search)
# Supports Intel GPU via OpenVINO, NVIDIA via CUDA
ort = { version = "2.0.0-rc.11", optional = true, features = ["ndarray"] }

# Ndarray for tensor operations (optional, semantic search)
ndarray = { version = "0.17", optional = true }

# Tokenizer for embedding models (optional, semantic search)
tokenizers = { version = "0.20", optional = true }

# Language detection (optional, semantic search)
whatlang = { version = "0.16", optional = true }

# Random sampling for language detection (optional, semantic search)
rand = { version = "0.8", optional = true }

# libc for FUSE error codes and system calls
libc = "0.2"
model2vec-rs = { version = "0.1.4", features = ["default"] }

# Parallel processing for indexing
rayon = "1.10"

# Disk-based LRU cache using sled
disklru = "0.3"

# Binary serialization for cache
bincode = "1.3"

[profile.release]
opt-level = 3
lto = true
